# community-detection

./: README.md  pyproject.toml  requirements.txt
notebooks/: Compare  copy.ipynb  Compare .ipynb  Compare.ipynb  clear_data.ipynb  community_detection_2.ipynb  test.ipynb
src/osnclusters/: pipeline.py
src/osnclusters/cli/: run.py  validate.py
src/osnclusters/community/: knn_graph.py  leiden.py
src/osnclusters/core/: config.py  logging.py  run_manager.py  types.py
src/osnclusters/datasets/: registry.py  validate.py
src/osnclusters/datasets/adapters/: lbsn2vec.py  snap.py
src/osnclusters/features/: user_features.py
src/osnclusters/io/: artifacts.py
src/osnclusters/metrics/: baselines.py  semantic.py  spatial.py  structural.py
src/osnclusters/models/: graphsage_unsup.py
src/osnclusters/preprocess/: checkins.py  edges.py
visualization/: app.py  graph_layout.py  io_utils.py  labeling.py  plots.py
